<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- MainActivity items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_measure">Measure</string>
    <string name="menu_history">History</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Log out</string>
    <string name="btn_login">Log in</string>
    <string name="hint_user">Username</string>
    <string name="hint_pass">Password</string>
    <string name="menu_regis"><u>Register</u></string>
    <string name="menu_forget"><u>Forget password</u></string>
    <string name="edit_profile">Edit profile</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile number</string>
    <string name="blood_type">Blood type</string>
    <string name="underlying">Underlying disease</string>
    <string name="doctor">Doctor</string>
    <string name="submit">Submit</string>
    <string name="watjai">WATJAI</string>
    <string name="information">Help</string>
    <string name="notification">Notification</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sub_district">Sub district</string>
    <string name="district">District</string>
    <string name="province">Province</string>
    <string name="postcode">Postcode</string>
    <string name="scandevice">Scan device</string>
    <string name="blanknoti">No notifications</string>

    <!-- OnBoard Screen. -->

    <string name="ob_header1">ขั้นตอนที่ 1</string>
    <string name="ob_header2">ขั้นตอนที่ 2</string>
    <string name="ob_header3">ขั้นตอนที่ 3</string>
    <string name="ob_header4">ขั้นตอนที่ 4</string>

    <string name="ob_get_started">เสร็จสิ้น</string>

    <string name="ob_desc1">แปะแผ่น electrode จุดสีแดงแปะบริเวณเหนือหน้าอกด้านซ้ายของท่าน จุดสีเขียวแปะบริเวณเหนือหน้าอกด้านขวาของท่าน จุดสีเหลืองแปะบริเวณด้านล่างของหน้าอกด้านซ้ายของท่าน</string>
    <string name="ob_desc2">เข้าแอปพลิเคชั่น วัดใจ หลังจากนั้น กดเลือกเมนู “วัดใจ” เพื่อทำการวัด</string>
    <string name="ob_desc3">หน้าจอจะแสดงรายชื่อบลูทูธต่างๆที่โทรศัพท์มือถือของท่านแสกนเจอให้กดเลือก “E-Health” เพื่อทำการเชื่อต่อระหว่างโทณศัพท์มือถือและเครื่องวัด</string>
    <string name="ob_desc4">เมื่อทำการเชื่อต่อบลูทูธเสร็จ จะขึ้นแสดงหน้านี้ กดปุ่ม “เริ่มวัดคลื่นหัวใจ” เพื่อทำการวัดสัญญาณหัวใจ กดปุ่ม “หยุดวัดคลื่นหัวใจ” เพื่อทำการหยุดโปรแกรม </string>

    <string name="cancel"><u>Cancel</u></string>
</resources>
