<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:padding="30dp"
    android:orientation="vertical"
    android:background="@drawable/bg_mainmenu"
    tools:context="com.example.android.bluetoothlegatt.Activity.MainActivity">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="10dp"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/btnMeasure"
                android:src="@drawable/selector_btn_measure"
                android:layout_width="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_gravity="top"
                android:background="@color/bg_btn_blank_color"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_measure"
                android:textSize="10pt"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"/>
        </FrameLayout>
        <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/btnProfile"
                android:src="@drawable/selector_btn_profile"
                android:layout_width="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_gravity="top"
                android:background="@color/bg_btn_blank_color"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_profile"
                android:textSize="10pt"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="10dp"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/btnHistory"
                android:src="@drawable/selector_btn_history"
                android:layout_width="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_gravity="top"
                android:background="@color/bg_btn_blank_color"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_history"
                android:textSize="10pt"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"/>
        </FrameLayout>
        <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/btnSetting"
                android:src="@drawable/selector_btn_notic"
                android:layout_width="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_gravity="top"
                android:background="@color/bg_btn_blank_color"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/notification"
                android:textSize="10pt"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="10dp"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/btnHelp"
                android:src="@drawable/selector_btn_setting"
                android:layout_width="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_gravity="top"
                android:background="@color/bg_btn_blank_color"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_setting"
                android:textSize="10pt"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"/>
        </FrameLayout>
        <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/btnLogout"
                android:src="@drawable/selector_btn_info"
                android:layout_width="match_parent"
                android:layout_marginBottom="30dp"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_gravity="top"
                android:background="@color/bg_btn_blank_color"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/information"
                android:textSize="10pt"
                android:layout_gravity="bottom"
                android:gravity="bottom|center_horizontal"/>
        </FrameLayout>
    </LinearLayout>


</LinearLayout>
