<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_menu"
    tools:context="com.example.android.bluetoothlegatt.Activity.MainActivity">

        <LinearLayout
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_height="wrap_content">
                        <RelativeLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                                <ImageButton
                                    android:paddingTop="5dp"
                                    android:paddingBottom="30dp"
                                    android:id="@+id/btnMeasure"
                                    android:src="@drawable/selector_btn_measure"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitCenter"
                                    android:layout_gravity="top"
                                    android:background="@color/bg_btn_blank_color"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/menu_measure"
                                    android:textSize="10pt"
                                    android:textColor="@color/white_text"
                                    android:layout_gravity="bottom"
                                    android:gravity="bottom|center_horizontal"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                                <ImageButton
                                    android:paddingTop="5dp"
                                    android:paddingBottom="30dp"
                                    android:id="@+id/btnProfile"
                                    android:src="@drawable/selector_btn_profile"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitCenter"
                                    android:layout_gravity="top"
                                    android:background="@color/bg_btn_blank_color"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/menu_profile"
                                    android:textSize="10pt"
                                    android:textColor="@color/white_text"
                                    android:layout_gravity="bottom"
                                    android:gravity="bottom|center_horizontal"/>
                        </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_height="wrap_content">
                        <RelativeLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                                <ImageButton
                                    android:paddingTop="5dp"
                                    android:paddingBottom="30dp"
                                    android:id="@+id/btnHistory"
                                    android:src="@drawable/selector_btn_history"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitCenter"
                                    android:layout_gravity="top"
                                    android:background="@color/bg_btn_blank_color"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/menu_history"
                                    android:textSize="10pt"
                                    android:layout_gravity="bottom"
                                    android:textColor="@color/white_text"
                                    android:gravity="bottom|center_horizontal"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                                <ImageButton
                                    android:paddingTop="5dp"
                                    android:paddingBottom="30dp"
                                    android:id="@+id/btnNotification"
                                    android:src="@drawable/selector_btn_notic"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitCenter"
                                    android:layout_gravity="top"
                                    android:background="@color/bg_btn_blank_color"/>
                                <TextView
                                    android:id="@+id/countNotification"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_margin="7dp"
                                    android:textStyle="bold"
                                    android:textColor="@color/white_text"
                                    android:gravity="center"
                                    android:textSize="12pt"
                                    android:background="@drawable/shap_circle_status_alert"
                                    android:layout_alignParentTop="true"
                                    android:layout_alignParentEnd="true" />
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/notification"
                                    android:textSize="10pt"
                                    android:layout_gravity="bottom"
                                    android:textColor="@color/white_text"
                                    android:gravity="bottom|center_horizontal"/>
                        </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_height="wrap_content">
                        <RelativeLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                                <ImageButton
                                    android:paddingTop="5dp"
                                    android:paddingBottom="30dp"
                                    android:id="@+id/btnSetting"
                                    android:src="@drawable/selector_btn_setting"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitCenter"
                                    android:layout_gravity="top"
                                    android:background="@color/bg_btn_blank_color"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/menu_setting"
                                    android:textSize="10pt"
                                    android:textColor="@color/white_text"
                                    android:layout_gravity="bottom"
                                    android:gravity="bottom|center_horizontal"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                                <ImageButton
                                    android:paddingTop="5dp"
                                    android:paddingBottom="30dp"
                                    android:id="@+id/btnHelp"
                                    android:src="@drawable/selector_btn_info"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="fitCenter"
                                    android:layout_gravity="top"
                                    android:background="@color/bg_btn_blank_color"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/information"
                                    android:textSize="10pt"
                                    android:textColor="@color/white_text"
                                    android:layout_gravity="bottom"
                                    android:gravity="bottom|center_horizontal"/>
                        </RelativeLayout>
                </LinearLayout>
        </LinearLayout>
</RelativeLayout>
